Bug 41730 - Shouldn't try to connect D-Bus signal in constructed
Summary: Shouldn't try to connect D-Bus signal in constructed
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: yell (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-12 13:21 UTC by Guillaume Desmottes
Modified: 2011-10-12 13:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
call-channel: add TPY_CALL_CHANNEL_FEATURE_CORE (7.19 KB, patch)
2011-10-12 13:28 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2011-10-12 13:21:06 UTC
see bug #41729
Comment 1 Guillaume Desmottes 2011-10-12 13:28:41 UTC
Created attachment 52273 [details] [review]
call-channel: add TPY_CALL_CHANNEL_FEATURE_CORE

We shouldn't try to connect D-Bus signals in a constructed function
(fdo #41729); this has to be done when preparing the core feature of the
object so it is guaranteed that TpProxy has already been prepared.
Comment 2 Guillaume Desmottes 2011-10-12 13:51:01 UTC
Attachment 52273 [details] pushed as ec9faee - call-channel: add TPY_CALL_CHANNEL_FEATURE_CORE


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.