call-channel: add TPY_CALL_CHANNEL_FEATURE_CORE

We shouldn't try to connect D-Bus signals in a constructed function
(fdo #41729); this has to be done when preparing the core feature of the
object so it is guaranteed that TpProxy has already been prepared.

https://bugs.freedesktop.org/show_bug.cgi?id=41730